# embedded_thin_shell

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindArpack++.cmake  FindBlas.cmake  (+9 more)
demo/: CMakeLists.txt  colide_rigid_data.cpp  colide_rigid_data.h  collide_rigid_data.cpp  collide_rigid_data.h  embedded_shell_simulator.cpp  embedded_shell_simulator.h  main.cpp  single_point_simulator.cpp  single_point_simulator.h  zsw_convert.cpp  zsw_convert.h  zsw_debug.h
doc/: step  (+7 more)
src/interpolator/: CMakeLists.txt  interpolator.cpp  interpolator.h
src/shell_deformer/: CMakeLists.txt  cluster.cpp  cluster.h  const_bending.cpp  const_bending.h  dc_pen.cpp  dc_pen.h  deformer.cpp  deformer.h  func2opt.cpp  func2opt.h  lap_operator.h  pos_pen.cpp  pos_pen.h  sparse_transition.cpp  sparse_transition.h  spring_potential.cpp  spring_potential.h
src/volume_simulator/: CMakeLists.txt
src/volume_simulator/simulator_ui/: CMakeLists.txt  DataModel.cpp  DataModel.h  DataModelRender.h  DragNodeOp.cpp  DragNodeOp.h  MainWindow.cpp  MainWindow.h  PerturbationOp.h  SelectionOp.h  simulator.ui
src/volume_simulator/solid_elastic/: CMakeLists.txt  FullStVKSimulator.h  Simulator.h  SubspaceSimulator.cpp  SubspaceSimulator.h
src/volume_simulator/solid_elastic/Common/: AuxTools.h  BBox.h  CMakeLists.txt  DrawCurves.h  GetNumCores.h  HarmonicOscillator.h  HashedId.cpp  HashedId.h  IOTools.h  JsonFilePaser.cpp  JsonFilePaser.h  Log.h  Objmesh.cpp  Objmesh.h  PartialConstraints.cpp  PartialConstraints.h  PythonFFT.h  SelectionGroup.cpp  SelectionGroup.h  TetMesh.cpp  TetMesh.h  TetMeshEmbeding.cpp  TetMeshEmbeding.h  Timer.h  UnitTestAssert.h  VTKWriter.h  assertext.h
src/volume_simulator/solid_elastic/ElasticModel/: BaseFullModel.h  BaseFullSim.h  CMakeLists.txt  CollisionForceTetFull.cpp  CollisionForceTetFull.h  DefGradTet.h  ElasticForceTetFull.cpp  ElasticForceTetFull.h  ElasticForceTetFullStVK.cpp  ElasticForceTetFullStVK.h  ExtendModalBasis.h  FullElasticModel.h  FullSimulator.cpp  FullSimulator.h  FullStVKSimModel.h  LagImpFullSim.cpp  LagImpFullSim.h  MassMatrix.h  ReducedElasticModel.cpp  ReducedElasticModel.h  ReducedSimulator.cpp  ReducedSimulator.h
src/volume_simulator/solid_elastic/ElasticModel/collision/: CMakeLists.txt  CMakeLists.txt~  assertext.h  collision_ball_energy.h  collision_ball_energy.mac  spring.h  spring.mac  test.cpp
src/volume_simulator/solid_elastic/Math/: CASADITools.h  CMakeLists.txt  ConMatrixTools.cpp  ConMatrixTools.h  MatrixIO.h  MatrixTools.h  SparseGenEigenSolver.cpp  SparseGenEigenSolver.h  SparseMatrixTools.h
src/volume_simulator/solid_tools/: CMakeLists.txt
src/volume_simulator/solid_tools/cubature/: CMakeLists.txt  ReducedSimCubature.h  example.ini  main.cpp
src/volume_simulator/solid_tools/cubature/cubacode/: GreedyCubop.cpp  GreedyCubop.h  MATRIX_DEBUG.cpp  VECTOR.h  VECTOR_DEBUG.cpp  steve.cpp
src/volume_simulator/solid_tools/extend_basis/: CMakeLists.txt  example.ini  main.cpp
src/volume_simulator/ui_lib/: CMakeLists.txt  VolObjMeshCtrl.h
src/volume_simulator/ui_lib/Animation/: AniCtrl.cpp  AniCtrl.h  AniDataModel.h  AniSliderBar.h
src/volume_simulator/ui_lib/Manipulation/: #DragCtrl.h#  ConTrackBall.cpp  ConTrackBall.h  DragCtrl.cpp  DrawWithNames.h  Manipulatoion.cpp  Manipulatoion.h  Perturbator.h  PosConMatrix.h  SelectCtrl.cpp  SelectCtrl.h  Selectable.h  VolObjCtrl.h
src/volume_simulator/ui_lib/RecordAndPlay/: EventSerialization.cpp  EventSerialization.h  QInputEventRecorder.cpp  QInputEventRecorder.h  QInputEventRecorderCmd.h  RecordAndReplayWrapper.cpp  RecordAndReplayWrapper.h
src/volume_simulator/ui_lib/Render/: AxisTorus.cpp  AxisTorus.h  BufferRender.cpp  BufferRender.h  ConTrackBall.cpp  ConTrackBall.h  DragGroupSelDraw.cpp  DragGroupSelDraw.h  FileDialog.cpp  FileDialog.h  MeshRender.cpp  MeshRender.h  QGLViewerExt.cpp  QGLViewerExt.h  QGLViewerHeaders.h  SelfRenderEle.h  SelfRenderRect.cpp  SelfRenderRect.h  TextForRender.h  VolNodeGroupRender.cpp  VolNodeGroupRender.h  WindowsHeaders.h
test/: CMakeLists.txt
test/test_ball_on_sofa/: CMakeLists.txt  main.cpp  rigid_body.cpp  rigid_body.h  rigid_elastic.cpp  rigid_elastic.h
test/test_case/: CMakeLists.txt
test/test_case/CommonTest/: AuxToolsTest.cpp  BBoxTest.cpp  CMakeLists.txt  DrawCurvesTest.cpp  HarmonicOscillatorTest.cpp  IOToolsTest.cpp  JsonFilePaserTest.cpp  ObjmeshTest.cpp  PartialConstraintsTest.cpp  TetMeshFactoryForTest.h  TetMeshTest.cpp  main.cpp
test/test_case/ElasticModelTest/: CMakeLists.txt  DefGradTetTest.cpp  ElasticForceTetFullStVKTest.cpp  ExtendModalBasisTest.cpp  MassMatrixTest.cpp  TetMeshFactoryForTest.h  main.cpp
test/test_case/MathTest/: CMakeLists.txt  ConMatrixToolsTest.cpp  MatrixIOTest.cpp  MatrixToolsTest.cpp  SparseGenEigenSolverTest.cpp  SparseMatrixToolsTest.cpp  main.cpp
test/test_case/TestData/: PartialConTest.txt  beam.abq  beam.mtl  beamW.txt  dino.abq  dino.mtl  dinoW.txt  fish.abq  json.in  t.py.py
test/test_case/hello_dino/: CMakeLists.txt  main.cpp
test/test_cluster/: CMakeLists.txt  main.cpp
test/test_collision/: CMakeLists.txt  ball_move.cpp  beam_case.cpp  colide_rigid_body_data.cpp  colide_rigid_body_data.h  drop_case.cpp  genobj_normal.cpp  hit_ball.cpp  main.cpp  merge_obj.cpp  move_ball.h  objio.h
test/test_collision_forcetetfull/: CMakeLists.txt  main.cpp
test/test_domain_decomposition/: CMakeLists.txt  main.cpp
test/test_embed/: CMakeLists.txt  main.cpp
test/test_gen_data/: CMakeLists.txt  main.cpp
test/test_interpolation/: CMakeLists.txt  main.cpp
test/test_mpi/: CMakeLists.txt  main.cpp
test/test_multi_threads/: CMakeLists.txt  main.cpp
test/test_node_cpu/: CMakeLists.txt  main.cpp
test/test_omp/: CMakeLists.txt  main.cpp
test/test_petsc/: CMakeLists.txt  main.cpp
test/test_shell/: CMakeLists.txt  main.cpp
test/test_ui/: CMakeLists.txt  DataModel.cpp  DataModel.h  DataModelRender.h  DragNodeOp.cpp  MainWindow.cpp  MainWindow.h  PassiveObject.cpp  PassiveObject.h  PerturbationOp.h  SelectionOp.h  main.cpp  simulator.ui
test/test_volume/: CMakeLists.txt  main.cpp
(+743 files in other folders)
